# gtui

./: .gitignore  LICENSE  README.md  index.html  server.py
.codex/environments/: environment.toml
docs/: developing.md
frontend/: index.html
frontend/screenshots/: readme.html
frontend/static/css/: app.css
frontend/static/js/: app.js  convoys.mjs  convoys.test.mjs  rigs.mjs  (+5 more)
scripts/: capture_gtui_window.sh  dump_snapshot.sh  inspect_native.sh  parity_smoke.sh  rebuild_and_run.sh  rebuild_and_run_tauri.sh  render_app_icon.sh  render_app_icon.swift  render_readme_screenshots.py  render_readme_screenshots.sh  render_readme_screenshots.swift
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump_snapshot.rs  snapshot_dump.rs
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  config.rs  ipc.rs  lib.rs  main.rs  models.rs  parse.rs  sessions.rs  snapshot.rs
src-tauri/tests/: command_behaviour.rs  ipc_roundtrip.rs  parse_fixtures.rs  regression_gate.rs  sessions_fixtures.rs  snapshot_contract.rs  snapshot_flow.rs  snapshot_parity.rs
src-tauri/tests/common/: mod.rs
src-tauri/tests/fixtures/: SNAPSHOT_CONTRACT.md  WEBUI_SNAPSHOT_PARITY.md  claude_session.jsonl  claude_session_no_cwd.jsonl  codex_rollout.jsonl  codex_rollout_turn_only.jsonl  gt_crew_list.json  gt_feed.txt  gt_status_daemon_stopped.txt  gt_status_fast.txt  snapshot_contract_empty.json  snapshot_contract_populated.json  webui_snapshot_empty.json  webui_snapshot_populated.json
webui/: README.md  index.html  server.py
(+10 files in other folders)
