[package]
name = "gtui"
version = "0.1.0"
description = "Gas Town UI — desktop dashboard for a Gas Town workspace"
authors = ["GTUI contributors"]
edition = "2021"
rust-version = "1.77"
default-run = "gtui"

[lib]
name = "gtui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
regex = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[dev-dependencies]
tempfile = "3"
tauri = { version = "2", features = ["test"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
